Revert "fix the image stretching by"
This reverts commit fcd0e340ac0ac05c03be7f96ff99944636a9970c.

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -30,6 +30,5 @@ body {
 }
 
 img {
-	width: 100%;
-	height: auto;
+	max-width: 100%;
 }
